修復 WebSocket 連接和訂閱機制
主要改進：
- 統一 Web 和終端版的 WebSocket 處理邏輯
- 修復 Binance bookTicker 解析問題
- 完善其他交易所 (Bitget, Bybit, Gate) 的 WS 訂閱
- 改進手動 ping/pong 機制，提升連接穩定性
- 加強 .gitignore 保護敏感資訊
- 新增終端版依賴文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,33 @@
-# Sensitive files
+# ══════════════════════════════════════════════════════════════
+# 敏感資訊 - 絕對不能上傳
+# ══════════════════════════════════════════════════════════════
+
+# API 憑證配置
 config/trading_config*.json
+config/*_config.json
+.env
+.env.*
+
+# 日誌文件（可能包含敏感資訊）
 *.log
+log/
+logs/
 firebase-debug.log
 
+# 回測數據（可能很大）
+asBack/
+data/
+*.csv
+*.parquet
+
+# 臨時和緩存文件
+*.tmp
+*.cache
+.pytest_cache/
+
+# ══════════════════════════════════════════════════════════════
 # Python
+# ══════════════════════════════════════════════════════════════
 __pycache__/
 *.py[cod]
 *$py.class
